Update comments and .gitignore
Improved readability of a comment in the Spotify analysis notebook. Also, added 'Test Playlist' in the .gitignore to prevent this directory from being tracked. The updated comment provides a clearer explanation for the initial placeholders and ignoring 'Test Playlist' will help maintain repository cleanliness.

--- a/Spotify Data Science/Spotify analysis.ipynb
+++ b/Spotify Data Science/Spotify analysis.ipynb
@@ -564,7 +564,7 @@
     "# Define a set of class weights to evaluate\n",
     "class_weights_grid = [{0:1.0, 1:weight} for weight in np.linspace(1, 5, 100)]  # Drop the 100 down to 10 if you are running this on a weaker computer.\n",
     "\n",
-    "# Initial placeholders for best weights and highest f1 score\n",
+    "# Initial placeholders for the best weights and highest f1 score\n",
     "best_class_weights = None\n",
     "highest_f1 = 0\n",
     "\n",
