Removed commented section

--- a/Spotify Data Science/Song Popularity/Spotify-analysis-V2.0.ipynb
+++ b/Spotify Data Science/Song Popularity/Spotify-analysis-V2.0.ipynb
@@ -394,71 +394,71 @@
     "\n",
     "    xtrain, xtest, ytrain, ytest = train_test_split(df[inputs[i]], df[target], test_size=0.2, random_state=42)\n",
     "\n",
-    "    # # Training Model 1 KNN-Regressor\n",
-    "    # kernelNumber = find_best_kernel_value(False, xtrain, ytrain, xtest, ytest)\n",
-    "    # \n",
-    "    # print('KNN-Regressor Training...')\n",
-    "    # modelOne = neighbors.KNeighborsRegressor(kernelNumber)\n",
-    "    # modelOne.fit(xtrain, ytrain)\n",
-    "    # print('KNN-Regressor Fitted')\n",
-    "    # \n",
-    "    # # Apply a same threshold to train predictions\n",
-    "    # y_train, y_train_pred = predict_and_convert(modelOne, xtrain, ytrain, MINIMUM_POPULARITY_LIMIT)\n",
-    "    # print('\\nscores for the training set:')\n",
-    "    # analyze_algorithm(y_train, y_train_pred, files[i] + ' KNN-Regressor Training')\n",
-    "    # \n",
-    "    # y_test, y_test_pred = predict_and_convert(modelOne, xtest, ytest, MINIMUM_POPULARITY_LIMIT)\n",
-    "    # print('\\nscores for the testing set:')\n",
-    "    # analyze_algorithm(y_test, y_test_pred, files[i] + ' KNN-Regressor Testing')\n",
-    "    # \n",
-    "    # # Training Model 2 KNN-Classifier\n",
-    "    # y_train_two = (ytrain > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
-    "    # y_test_two = (ytest > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
-    "    # \n",
-    "    # kernelNumber = find_best_kernel_value(True, xtrain, y_train_two, xtest, y_test_two)\n",
-    "    # \n",
-    "    # print('KNN-Classifier Training...')\n",
-    "    # modelTwo = neighbors.KNeighborsClassifier(kernelNumber)\n",
-    "    # modelTwo.fit(xtrain, y_train_two.values.ravel())\n",
-    "    # print('KNN-Classifier Fitted')\n",
-    "    # \n",
-    "    # y_train_pred = modelTwo.predict(xtrain)\n",
-    "    # print('\\nscores for the training set:')\n",
-    "    # analyze_algorithm(y_train_two, y_train_pred, files[i] + ' KNN-Classifier Training')\n",
-    "    # \n",
-    "    # # Apply a same threshold to test predictions\n",
-    "    # y_test_pred = modelTwo.predict(xtest)\n",
-    "    # print('\\nscores for the testing set:')\n",
-    "    # analyze_algorithm(y_test_two, y_test_pred, files[i] + ' KNN-Classifier Testing')\n",
-    "    # \n",
-    "    # # Training Model 3 SVM-rbf\n",
-    "    # # The first dataset is too big to reasonably run with SVM as it generally take O(n^3*d) time for training\n",
-    "    # if i == 1:\n",
-    "    #     # Training Model 3 SVM\n",
-    "    #     print('YIIIIIPPPPPEEEEEEEEE')\n",
-    "    #     y_train = (ytrain > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
-    "    #     y_test = (ytest > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
-    "    # \n",
-    "    #     sc = StandardScaler()\n",
-    "    #     X_train = sc.fit_transform(xtrain)\n",
-    "    #     X_test = sc.transform(xtest)\n",
-    "    # \n",
-    "    #     # Training the SVM model on the Training set using a linear kernel\n",
-    "    #     print('SVM-Classifier Training...')\n",
-    "    #     modelThree = SVC(kernel='rbf', random_state=42)\n",
-    "    #     modelThree.fit(X_train, y_train.values.ravel())\n",
-    "    #     print('SVM-Classifier Fitted')\n",
-    "    # \n",
-    "    #     # Predicting the results\n",
-    "    #     print('\\nscores for the training set:')\n",
-    "    #     y_pred = modelThree.predict(X_train)\n",
-    "    #     analyze_algorithm(y_train, y_pred, files[i] + ' SVM Training')\n",
-    "    # \n",
-    "    #     print('\\nscores for the testing set:')\n",
-    "    #     y_pred = modelThree.predict(X_test)\n",
-    "    #     analyze_algorithm(y_test, y_pred, files[i] + ' SVM Testing')\n",
-    "    # \n",
-    "    # # Training Model 4 Convolution Neural Network\n",
+    "    # Training Model 1 KNN-Regressor\n",
+    "    kernelNumber = find_best_kernel_value(False, xtrain, ytrain, xtest, ytest)\n",
+    "\n",
+    "    print('KNN-Regressor Training...')\n",
+    "    modelOne = neighbors.KNeighborsRegressor(kernelNumber)\n",
+    "    modelOne.fit(xtrain, ytrain)\n",
+    "    print('KNN-Regressor Fitted')\n",
+    "\n",
+    "    # Apply a same threshold to train predictions\n",
+    "    y_train, y_train_pred = predict_and_convert(modelOne, xtrain, ytrain, MINIMUM_POPULARITY_LIMIT)\n",
+    "    print('\\nscores for the training set:')\n",
+    "    analyze_algorithm(y_train, y_train_pred, files[i] + ' KNN-Regressor Training')\n",
+    "\n",
+    "    y_test, y_test_pred = predict_and_convert(modelOne, xtest, ytest, MINIMUM_POPULARITY_LIMIT)\n",
+    "    print('\\nscores for the testing set:')\n",
+    "    analyze_algorithm(y_test, y_test_pred, files[i] + ' KNN-Regressor Testing')\n",
+    "\n",
+    "    # Training Model 2 KNN-Classifier\n",
+    "    y_train_two = (ytrain > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
+    "    y_test_two = (ytest > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
+    "\n",
+    "    kernelNumber = find_best_kernel_value(True, xtrain, y_train_two, xtest, y_test_two)\n",
+    "\n",
+    "    print('KNN-Classifier Training...')\n",
+    "    modelTwo = neighbors.KNeighborsClassifier(kernelNumber)\n",
+    "    modelTwo.fit(xtrain, y_train_two.values.ravel())\n",
+    "    print('KNN-Classifier Fitted')\n",
+    "\n",
+    "    y_train_pred = modelTwo.predict(xtrain)\n",
+    "    print('\\nscores for the training set:')\n",
+    "    analyze_algorithm(y_train_two, y_train_pred, files[i] + ' KNN-Classifier Training')\n",
+    "\n",
+    "    # Apply a same threshold to test predictions\n",
+    "    y_test_pred = modelTwo.predict(xtest)\n",
+    "    print('\\nscores for the testing set:')\n",
+    "    analyze_algorithm(y_test_two, y_test_pred, files[i] + ' KNN-Classifier Testing')\n",
+    "\n",
+    "    # Training Model 3 SVM-rbf\n",
+    "    # The first dataset is too big to reasonably run with SVM as it generally take O(n^3*d) time for training\n",
+    "    if i == 1:\n",
+    "        # Training Model 3 SVM\n",
+    "        print('YIIIIIPPPPPEEEEEEEEE')\n",
+    "        y_train = (ytrain > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
+    "        y_test = (ytest > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
+    "\n",
+    "        sc = StandardScaler()\n",
+    "        X_train = sc.fit_transform(xtrain)\n",
+    "        X_test = sc.transform(xtest)\n",
+    "\n",
+    "        # Training the SVM model on the Training set using a linear kernel\n",
+    "        print('SVM-Classifier Training...')\n",
+    "        modelThree = SVC(kernel='rbf', random_state=42)\n",
+    "        modelThree.fit(X_train, y_train.values.ravel())\n",
+    "        print('SVM-Classifier Fitted')\n",
+    "\n",
+    "        # Predicting the results\n",
+    "        print('\\nscores for the training set:')\n",
+    "        y_pred = modelThree.predict(X_train)\n",
+    "        analyze_algorithm(y_train, y_pred, files[i] + ' SVM Training')\n",
+    "\n",
+    "        print('\\nscores for the testing set:')\n",
+    "        y_pred = modelThree.predict(X_test)\n",
+    "        analyze_algorithm(y_test, y_pred, files[i] + ' SVM Testing')\n",
+    "\n",
+    "    # Training Model 4 Convolution Neural Network\n",
     "    X_train, X_test, y_train, y_test = train_test_split(df[inputs[i]], df[target], test_size=0.2, random_state=42)\n",
     "    y_train = (y_train > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
     "    y_test = (y_test > MINIMUM_POPULARITY_LIMIT).astype(int)\n",
@@ -468,69 +468,69 @@
     "    y_train = y_train.astype('float32')\n",
     "    y_test = y_test.astype('float32')\n",
     "\n",
-    "    # # Define the neural network structure\n",
-    "    # modelFour = Sequential([\n",
-    "    #     Dense(32, activation='relu', input_shape=(X_train.shape[1],)),\n",
-    "    #     Dense(64, activation='relu'),\n",
-    "    #     Dense(64, activation='relu'),\n",
-    "    #     Dense(32, activation='relu'),\n",
-    "    #     Dense(1, activation='sigmoid')\n",
-    "    # ])\n",
-    "    # \n",
-    "    # # Compile the model\n",
-    "    # modelFour.compile(optimizer='adam',\n",
-    "    #                   loss='binary_crossentropy',\n",
-    "    #                   metrics=[f1_score_nn])\n",
-    "    # \n",
-    "    # y_train_numpy = y_train.to_numpy().astype('int64')\n",
-    "    # unique_classes, class_counts = np.unique(y_train_numpy, return_counts=True)\n",
-    "    # class_weights_dict = {class_label: len(y_train_numpy) / count for class_label, count in\n",
-    "    #                       zip(unique_classes, class_counts)}\n",
-    "    # \n",
-    "    # # Define EarlyStopping and ModelCheckpoint callbacks.\n",
-    "    # es = EarlyStopping(monitor='val_f1_score_nn', mode='max', verbose=1, patience=15)\n",
-    "    # mc = ModelCheckpoint('best_model.keras', monitor='val_f1_score_nn', mode='max', verbose=1, save_best_only=True,\n",
-    "    #                      save_format='tf')\n",
-    "    # # callbacks=[es, mc]\n",
-    "    # \n",
-    "    # log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "    # tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
-    "    # # callbacks=[tensorboard_callback, es, mc]\n",
-    "    # # Pass class weights and callbacks into model.fit().\n",
-    "    # modelFour.fit(X_train, y_train, epochs=100, validation_data=(X_test, y_test), batch_size=100,\n",
-    "    #               class_weight=class_weights_dict, callbacks=[es, mc])\n",
-    "    # \n",
-    "    # # Load the best model\n",
-    "    # modelFour = keras.models.load_model('best_model.keras')\n",
-    "    # \n",
-    "    # # Make predictions\n",
-    "    # predictions = modelFour.predict(X_test)\n",
-    "    # plt.hist(predictions, bins=20)\n",
-    "    # plt.xlabel('Predicted probabilities')\n",
-    "    # plt.ylabel('Count')\n",
-    "    # plt.show()\n",
-    "    # \n",
-    "    # predictions = (modelFour.predict(X_train) > MINIMUM_POPULARITY_PERCENTAGE).astype(\"int64\")\n",
-    "    # print('\\nscores for the Training set:')\n",
-    "    # analyze_algorithm(y_train, predictions, files[i] + ' Neural Network Training')\n",
-    "    # \n",
-    "    # predictions = (modelFour.predict(X_test) > MINIMUM_POPULARITY_PERCENTAGE).astype(\"int64\")\n",
-    "    # print('\\nscores for the Testing set:')\n",
-    "    # analyze_algorithm(y_test, predictions, files[i] + ' Neural Network Testing')\n",
-    "    # \n",
-    "    # # Training Model 5 Decision Tree Classifier\n",
-    "    # modelFive = DecisionTreeClassifier()\n",
-    "    # print('Decision Tree Classifier Training...')\n",
-    "    # modelFive.fit(X_train, y_train.values.ravel())\n",
-    "    # print('Decision Tree Classifier Fitted')\n",
-    "    # \n",
-    "    # y_train_pred = modelFive.predict(X_train)\n",
-    "    # print('\\nscores for the training set:')\n",
-    "    # analyze_algorithm(y_train, y_train_pred, files[i] + ' Decision Tree Classifier Training')\n",
-    "    # \n",
-    "    # y_test_pred = modelFive.predict(X_test)\n",
-    "    # print('\\nscores for the testing set:')\n",
-    "    # analyze_algorithm(y_test, y_test_pred, files[i] + ' Decision Tree Classifier Testing')\n",
+    "    # Define the neural network structure\n",
+    "    modelFour = Sequential([\n",
+    "        Dense(32, activation='relu', input_shape=(X_train.shape[1],)),\n",
+    "        Dense(64, activation='relu'),\n",
+    "        Dense(64, activation='relu'),\n",
+    "        Dense(32, activation='relu'),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "\n",
+    "    # Compile the model\n",
+    "    modelFour.compile(optimizer='adam',\n",
+    "                      loss='binary_crossentropy',\n",
+    "                      metrics=[f1_score_nn])\n",
+    "\n",
+    "    y_train_numpy = y_train.to_numpy().astype('int64')\n",
+    "    unique_classes, class_counts = np.unique(y_train_numpy, return_counts=True)\n",
+    "    class_weights_dict = {class_label: len(y_train_numpy) / count for class_label, count in\n",
+    "                          zip(unique_classes, class_counts)}\n",
+    "\n",
+    "    # Define EarlyStopping and ModelCheckpoint callbacks.\n",
+    "    es = EarlyStopping(monitor='val_f1_score_nn', mode='max', verbose=1, patience=15)\n",
+    "    mc = ModelCheckpoint('best_model.keras', monitor='val_f1_score_nn', mode='max', verbose=1, save_best_only=True,\n",
+    "                         save_format='tf')\n",
+    "    # callbacks=[es, mc]\n",
+    "\n",
+    "    log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "    tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
+    "    # callbacks=[tensorboard_callback, es, mc]\n",
+    "    # Pass class weights and callbacks into model.fit().\n",
+    "    modelFour.fit(X_train, y_train, epochs=100, validation_data=(X_test, y_test), batch_size=100,\n",
+    "                  class_weight=class_weights_dict, callbacks=[es, mc])\n",
+    "\n",
+    "    # Load the best model\n",
+    "    modelFour = keras.models.load_model('best_model.keras')\n",
+    "\n",
+    "    # Make predictions\n",
+    "    predictions = modelFour.predict(X_test)\n",
+    "    plt.hist(predictions, bins=20)\n",
+    "    plt.xlabel('Predicted probabilities')\n",
+    "    plt.ylabel('Count')\n",
+    "    plt.show()\n",
+    "\n",
+    "    predictions = (modelFour.predict(X_train) > MINIMUM_POPULARITY_PERCENTAGE).astype(\"int64\")\n",
+    "    print('\\nscores for the Training set:')\n",
+    "    analyze_algorithm(y_train, predictions, files[i] + ' Neural Network Training')\n",
+    "\n",
+    "    predictions = (modelFour.predict(X_test) > MINIMUM_POPULARITY_PERCENTAGE).astype(\"int64\")\n",
+    "    print('\\nscores for the Testing set:')\n",
+    "    analyze_algorithm(y_test, predictions, files[i] + ' Neural Network Testing')\n",
+    "\n",
+    "    # Training Model 5 Decision Tree Classifier\n",
+    "    modelFive = DecisionTreeClassifier()\n",
+    "    print('Decision Tree Classifier Training...')\n",
+    "    modelFive.fit(X_train, y_train.values.ravel())\n",
+    "    print('Decision Tree Classifier Fitted')\n",
+    "\n",
+    "    y_train_pred = modelFive.predict(X_train)\n",
+    "    print('\\nscores for the training set:')\n",
+    "    analyze_algorithm(y_train, y_train_pred, files[i] + ' Decision Tree Classifier Training')\n",
+    "\n",
+    "    y_test_pred = modelFive.predict(X_test)\n",
+    "    print('\\nscores for the testing set:')\n",
+    "    analyze_algorithm(y_test, y_test_pred, files[i] + ' Decision Tree Classifier Testing')\n",
     "\n",
     "    # Training Model 6 Random Forest Classifier\n",
     "    modelSix = RandomForestClassifier(n_estimators=500, n_jobs=-1)\n",
