--- a/Spotify Data Science/Song Popularity/Spotify analysis.ipynb
+++ b/Spotify Data Science/Song Popularity/Spotify analysis.ipynb
@@ -6,7 +6,11 @@
     "Data Science Semester project\n",
     "@Authour: Ben Funk\n",
     "\n",
-    "Just as a disclaimer, I was running all of my code on either an apple M2 max 12 core CPU and 38 core GPU 64 GB ram or a Nvidia 3070 intel i7 10700k with 96 GB ram, and the code took a couple hours on both of my setups. This is a very intensive run so expect it to take a while. I have tried to take out the most computationally intensive parts to make it run faster though."
+    "Just as a disclaimer, I was running all of my code on either an apple M2 max 12 core CPU and 38 core GPU 64 GB ram or a Nvidia 3070 intel i7 10700k with 96 GB ram, and the code took a couple hours on both of my setups. This is a very intensive run so expect it to take a while. I have tried to take out the most computationally intensive parts to make it run faster though.\n",
+    "\n",
+    "This was iteration one of getting the code to work and then V2.0 was made to streamline the code and make running it easier.\n",
+    "\n",
+    "the dataset is taken from: https://www.kaggle.com/datasets/maharshipandya/-spotify-tracks-dataset/ or https://www.kaggle.com/code/skylarhew/python-spotify-matrix\n"
    ],
    "metadata": {
     "collapsed": false
@@ -121,7 +125,7 @@
    "source": [
     "\n",
     "# variable I will try to predict: popularity\n",
-    "# the dataset is taken from: https://www.kaggle.com/datasets/maharshipandya/-spotify-tracks-dataset/ or https://www.kaggle.com/code/skylarhew/python-spotify-matrix\n",
+    "\n",
     "Cutoff = 40\n",
     "Cutoffp = Cutoff / 100\n",
     "\n",
