Add new files and update started ebay webscraping project

--- a/Spotify Data Science/Playlist Song Recomendation/Data Exploration.ipynb
+++ b/Spotify Data Science/Playlist Song Recomendation/Data Exploration.ipynb
@@ -1,14 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "resources: https://medium.com/analytics-vidhya/music-recommender-system-part-2-ff4c3f54cba3\n",
+    "\n",
+    "https://cs109group33.wixsite.com/spotify/eda\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "27945fadd8031da6"
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-20T20:58:00.842095Z",
-     "start_time": "2024-01-20T20:58:00.256023Z"
+     "end_time": "2024-02-28T19:09:39.662540Z",
+     "start_time": "2024-02-28T19:09:39.454668Z"
     }
    },
    "outputs": [],
@@ -74,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-20T20:58:01.164902Z",
-     "start_time": "2024-01-20T20:58:00.843183Z"
+     "end_time": "2024-02-28T19:09:40.000046Z",
+     "start_time": "2024-02-28T19:09:39.663304Z"
     }
    },
    "id": "65e72c7458ca2fc2",
@@ -86,10 +98,10 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "               000  00s  100  123   14   15   16   17   18  1967  ...   \nparty party_0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...  \\\nsummer_1       0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \nRap_2          0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \n#tb_3          0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \nDisney_4       0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \n\n               End Credits (Aladdin And The King Of Thieves)   \nparty party_0                                            NaN  \\\nsummer_1                                                 NaN   \nRap_2                                                    NaN   \n#tb_3                                                    NaN   \nDisney_4                                                 NaN   \n\n               Desperado - (Live)  Cheapest Flight  Policeman - Radio Edit   \nparty party_0                 NaN              NaN                     NaN  \\\nsummer_1                      NaN              NaN                     NaN   \nRap_2                         NaN              NaN                     NaN   \n#tb_3                         NaN              NaN                     NaN   \nDisney_4                      NaN              NaN                     NaN   \n\n               Alive - Oh Snap It’s Luke! Remix  Hair  Find Love (feat. Dboy)   \nparty party_0                               NaN   NaN                     NaN  \\\nsummer_1                                    NaN   NaN                     NaN   \nRap_2                                       NaN   NaN                     NaN   \n#tb_3                                       NaN   NaN                     NaN   \nDisney_4                                    NaN   NaN                     NaN   \n\n               17 (feat. Packy)  Generation Away  Latkes  \nparty party_0               NaN              NaN     NaN  \nsummer_1                    NaN              NaN     NaN  \nRap_2                       NaN              NaN     NaN  \n#tb_3                       NaN              NaN     NaN  \nDisney_4                    NaN              NaN     NaN  \n\n[5 rows x 64713 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>000</th>\n      <th>00s</th>\n      <th>100</th>\n      <th>123</th>\n      <th>14</th>\n      <th>15</th>\n      <th>16</th>\n      <th>17</th>\n      <th>18</th>\n      <th>1967</th>\n      <th>...</th>\n      <th>End Credits (Aladdin And The King Of Thieves)</th>\n      <th>Desperado - (Live)</th>\n      <th>Cheapest Flight</th>\n      <th>Policeman - Radio Edit</th>\n      <th>Alive - Oh Snap It’s Luke! Remix</th>\n      <th>Hair</th>\n      <th>Find Love (feat. Dboy)</th>\n      <th>17 (feat. Packy)</th>\n      <th>Generation Away</th>\n      <th>Latkes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>party party_0</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>summer_1</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Rap_2</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>#tb_3</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Disney_4</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 64713 columns</p>\n</div>"
+      "text/plain": "               000  00s  100  123   14   15   16   17   18  1967  ...  \\\nparty party_0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \nsummer_1       0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \nRap_2          0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \n#tb_3          0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \nDisney_4       0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  ...   \n\n               Sweeterman  Para Voce - 2016 Summer Mix  Two Worlds Reprise  \\\nparty party_0         NaN                          NaN                 NaN   \nsummer_1              NaN                          NaN                 NaN   \nRap_2                 NaN                          NaN                 NaN   \n#tb_3                 NaN                          NaN                 NaN   \nDisney_4              NaN                          NaN                 NaN   \n\n               Lover Lay Down  Banquet  For You (feat. Akon)  \\\nparty party_0             NaN      NaN                   NaN   \nsummer_1                  NaN      NaN                   NaN   \nRap_2                     NaN      NaN                   NaN   \n#tb_3                     NaN      NaN                   NaN   \nDisney_4                  NaN      NaN                   NaN   \n\n               Saturnz Barz (feat. Popcaan)  \\\nparty party_0                           NaN   \nsummer_1                                NaN   \nRap_2                                   NaN   \n#tb_3                                   NaN   \nDisney_4                                NaN   \n\n               The Stars Came out Once the Lights Went Out  \\\nparty party_0                                          NaN   \nsummer_1                                               NaN   \nRap_2                                                  NaN   \n#tb_3                                                  NaN   \nDisney_4                                               NaN   \n\n               Show Me (feat. Madison Ryann Ward)  \\\nparty party_0                                 NaN   \nsummer_1                                      NaN   \nRap_2                                         NaN   \n#tb_3                                         NaN   \nDisney_4                                      NaN   \n\n               Give Me The Bible - Congregational  \nparty party_0                                 NaN  \nsummer_1                                      NaN  \nRap_2                                         NaN  \n#tb_3                                         NaN  \nDisney_4                                      NaN  \n\n[5 rows x 64713 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>000</th>\n      <th>00s</th>\n      <th>100</th>\n      <th>123</th>\n      <th>14</th>\n      <th>15</th>\n      <th>16</th>\n      <th>17</th>\n      <th>18</th>\n      <th>1967</th>\n      <th>...</th>\n      <th>Sweeterman</th>\n      <th>Para Voce - 2016 Summer Mix</th>\n      <th>Two Worlds Reprise</th>\n      <th>Lover Lay Down</th>\n      <th>Banquet</th>\n      <th>For You (feat. Akon)</th>\n      <th>Saturnz Barz (feat. Popcaan)</th>\n      <th>The Stars Came out Once the Lights Went Out</th>\n      <th>Show Me (feat. Madison Ryann Ward)</th>\n      <th>Give Me The Bible - Congregational</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>party party_0</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>summer_1</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Rap_2</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>#tb_3</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Disney_4</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 64713 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,40 +156,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-20T20:59:23.888382Z",
-     "start_time": "2024-01-20T20:59:22.311250Z"
+     "end_time": "2024-02-28T19:09:59.337326Z",
+     "start_time": "2024-02-28T19:09:57.863895Z"
     }
    },
    "id": "8d55525838c19593",
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[6], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m song_playlist_matrix \u001B[38;5;241m=\u001B[39m combined_features\u001B[38;5;241m.\u001B[39mvalues\n\u001B[0;32m----> 2\u001B[0m \u001B[43msong_playlist_matrix\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhead\u001B[49m()\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'head'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "song_playlist_matrix = combined_features.values"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-20T21:30:39.529788Z",
-     "start_time": "2024-01-20T21:30:38.615335Z"
+     "end_time": "2024-02-28T19:10:27.138131Z",
+     "start_time": "2024-02-28T19:10:26.182899Z"
     }
    },
    "id": "e9c1e0bafdf72255",
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "code",
